force-app/main/default/objects/Case/fields/Action_qualit__c.field-meta.xml
<CustomField>
    <fullName>Action_qualit__c</fullName>
    <description>Anouar : Je viens de créer ce champ</description>
    <inlineHelpText>Sophia : Je viens de créer ce champ</inlineHelpText>
    <label>Action de qualité</label>
    <type>TextArea</type>
</CustomField>