force-app/main/default/objects/Case/fields/Activit_concernee__c.field-meta.xml
<CustomField>
    <fullName>Activit_concernee__c</fullName>
    <description>Anouar : J&apos;ai modifié le nom du champ</description>
    <inlineHelpText>Sophia : J&apos;ai modifié le nom du champ</inlineHelpText>
    <label>Activité concernée par la réclamation</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Type</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>VN</fullName>
            </value>
            <value>
                <fullName>VO</fullName>
            </value>
            <value>
                <fullName>SAV</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>