force-app/main/default/objects/Case/fields/Advisor__c.field-meta.xml
<CustomField>
    <fullName>Advisor__c</fullName>
    <inlineHelpText>Sophia : je vient de modier ce champs</inlineHelpText>
    <label>CC / CS</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Origin</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Abdelaziz Kasbaoui</fullName>
            </value>
            <value>
                <fullName>Adnane Aouad</fullName>
            </value>
            <value>
                <fullName>Faycal Lahouiri</fullName>
            </value>
            <value>
                <fullName>Hind Bouziane</fullName>
            </value>
            <value>
                <fullName>Hind Laabi</fullName>
            </value>
            <value>
                <fullName>Iman Labraiki</fullName>
            </value>
            <value>
                <fullName>Karim Ouahimi</fullName>
            </value>
            <value>
                <fullName>Youssef Ouanaim</fullName>
            </value>
            <value>
                <fullName>Omar Ahmadi</fullName>
            </value>
            <value>
                <fullName>Omar Alaoui</fullName>
            </value>
            <value>
                <fullName>Lamiae ElAboudy</fullName>
            </value>
            <value>
                <fullName>Driss Kamel</fullName>
            </value>
            <value>
                <fullName>Zineb Machkour</fullName>
            </value>
            <value>
                <fullName>Maria Belhachmi</fullName>
            </value>
            <value>
                <fullName>Khaoula Boutouil</fullName>
            </value>
            <value>
                <fullName>Aissam Amine</fullName>
            </value>
            <value>
                <fullName>Soufiane Assal</fullName>
            </value>
            <value>
                <fullName>Salaheddine Seyad</fullName>
            </value>
            <value>
                <fullName>ElMahdi Benslimane</fullName>
            </value>
            <value>
                <fullName>Amal Zarktouni</fullName>
            </value>
            <value>
                <fullName>Anass Lahlou</fullName>
            </value>
            <value>
                <fullName>Bouchra Lazrak</fullName>
            </value>
            <value>
                <fullName>Hicham Zenati</fullName>
            </value>
            <value>
                <fullName>Nawfel Benkirane</fullName>
            </value>
            <value>
                <fullName>Soumaya Reida</fullName>
            </value>
            <value>
                <fullName>Younes Ejmal</fullName>
            </value>
            <value>
                <fullName>Wadie Kerzazi</fullName>
            </value>
            <value>
                <fullName>Loubna Belkissari</fullName>
            </value>
            <value>
                <fullName>Mahmoud Seghiri</fullName>
            </value>
            <value>
                <fullName>Imad Ouazzani</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>