force-app/main/default/objects/Case/fields/Categorie3__c.field-meta.xml
<CustomField>
    <fullName>Categorie3__c</fullName>
    <label>Catégorie de réclamation tertiaire</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Activit_concernee__c</controllingField>
        <valueSetDefinition>
            <value>
                <fullName>Déréglage des options de conduite à la livraison</fullName>
            </value>
            <value>
                <fullName>Accessoires</fullName>
            </value>
            <value>
                <fullName>Demande de Devis</fullName>
            </value>
            <value>
                <fullName>Articles et accessoires lifestyle</fullName>
            </value>
            <value>
                <fullName>Attitude et comportement</fullName>
            </value>
            <value>
                <fullName>Bâtiment et locaux</fullName>
            </value>
            <value>
                <fullName>Campagnes de rappel</fullName>
            </value>
            <value>
                <fullName>Compétences</fullName>
            </value>
            <value>
                <fullName>Conditions générales</fullName>
            </value>
            <value>
                <fullName>Dépôt et restitution du véhicule</fullName>
            </value>
            <value>
                <fullName>Facturation</fullName>
            </value>
            <value>
                <fullName>Feedback Général sur le SAV</fullName>
            </value>
            <value>
                <fullName>Garantie</fullName>
            </value>
            <value>
                <fullName>Gestes commerciaux</fullName>
            </value>
            <value>
                <fullName>Information et communication</fullName>
            </value>
            <value>
                <fullName>Marketing &amp; Communication</fullName>
            </value>
            <value>
                <fullName>Pièces de rechange</fullName>
            </value>
            <value>
                <fullName>Prix et remises</fullName>
            </value>
            <value>
                <fullName>Processus internes</fullName>
            </value>
            <value>
                <fullName>Qualité des réparations</fullName>
            </value>
            <value>
                <fullName>Rendez-vous et accueil</fullName>
            </value>
            <value>
                <fullName>Services digitaux</fullName>
            </value>
            <value>
                <fullName>Solutions de mobilité</fullName>
            </value>
            <value>
                <fullName>Concurrence</fullName>
            </value>
            <value>
                <fullName>Design</fullName>
            </value>
            <value>
                <fullName>Essais sur route</fullName>
            </value>
            <value>
                <fullName>Feedback général sur le VN</fullName>
            </value>
            <value>
                <fullName>Livraison du véhicule</fullName>
            </value>
            <value>
                <fullName>Négociation de l&apos;offre de prix</fullName>
            </value>
            <value>
                <fullName>Offres</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>