force-app/main/default/objects/Case/fields/Cause_de_reclamation__c.field-meta.xml
<CustomField>
    <fullName>Cause_de_reclamation__c</fullName>
    <description>Anouar : je viens de modifier le label du champ</description>
    <inlineHelpText>Sophia : je viens de modifier le label du champ</inlineHelpText>
    <label>Cause principale de réclamation</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Categorie__c</controllingField>
        <valueSetDefinition>
            <value>
                <fullName>la disponibilité des articles et accessoires lifestyle</fullName>
            </value>
            <value>
                <fullName>la qualité des articles et accessoires lifestyle</fullName>
            </value>
            <value>
                <fullName>le design des articles et accessoires lifestyle</fullName>
            </value>
            <value>
                <fullName>la praticité des articles et accessoires lifestyle</fullName>
            </value>
            <value>
                <fullName>l&apos;alignement des articles et accessoires lifestyle avec l&apos;image de marque</fullName>
            </value>
            <value>
                <fullName>le processus d&apos;achat des articles et accessoires lifestyle</fullName>
            </value>
            <value>
                <fullName>la réactivité du personnel Smeia</fullName>
            </value>
            <value>
                <fullName>le sens client du personnel Smeia</fullName>
            </value>
            <value>
                <fullName>l&apos;assistance du personnel Smeia</fullName>
            </value>
            <value>
                <fullName>la flexibilité du personnel Smeia</fullName>
            </value>
            <value>
                <fullName>le comportement du personnel Smeia</fullName>
            </value>
            <value>
                <fullName>l&apos;apparence extérieure des bâtiments</fullName>
            </value>
            <value>
                <fullName>les horaires d&apos;ouverture de la succursale</fullName>
            </value>
            <value>
                <fullName>le parking visiteur</fullName>
            </value>
            <value>
                <fullName>la propreté de la succursale</fullName>
            </value>
            <value>
                <fullName>la visibilité de la marque</fullName>
            </value>
            <value>
                <fullName>les rafraichissements et boissons offerts</fullName>
            </value>
            <value>
                <fullName>l&apos;accessibilité à la succursale</fullName>
            </value>
            <value>
                <fullName>le réseau des succursales</fullName>
            </value>
            <value>
                <fullName>l&apos;aspect privé des consultations</fullName>
            </value>
            <value>
                <fullName>la zone d&apos;accueil au sein de la succursale</fullName>
            </value>
            <value>
                <fullName>la zone d&apos;attente au sein de la succursale</fullName>
            </value>
            <value>
                <fullName>la signalétique au sein de la succursale</fullName>
            </value>
            <value>
                <fullName>le confort des clients au sein de la succursale</fullName>
            </value>
            <value>
                <fullName>l&apos;expertise des équipes</fullName>
            </value>
            <value>
                <fullName>l&apos;identification claire des besoins exprimés</fullName>
            </value>
            <value>
                <fullName>la maîtrise du produit de la part des équipes</fullName>
            </value>
            <value>
                <fullName>la maîtrise des services offerts de la part des équipes</fullName>
            </value>
            <value>
                <fullName>le processus de prise de décision au sein des équipes</fullName>
            </value>
            <value>
                <fullName>la connaisance de l&apos;historique du client</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>