force-app/main/default/objects/Case/fields/Contentieux__c.field-meta.xml
<CustomField>
    <fullName>Contentieux__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Anouar : je viens d&apos;ajouter ce champ</description>
    <inlineHelpText>Anouar : je viens d&apos;ajouter ce champ</inlineHelpText>
    <label>Contentieux</label>
    <type>Checkbox</type>
</CustomField>