force-app/main/default/objects/Case/fields/Date_de_premier_affectation__c.field-meta.xml
<CustomField>
    <fullName>Date_de_premier_affectation__c</fullName>
    <label>Date de premier affectation</label>
    <type>DateTime</type>
</CustomField>