force-app/main/default/objects/Case/fields/email_client__c.field-meta.xml
<CustomField>
    <fullName>email_client__c</fullName>
    <label>email client</label>
    <type>Email</type>
</CustomField>