force-app/main/default/objects/Case/fields/email_manager__c.field-meta.xml
<CustomField>
    <fullName>email_manager__c</fullName>
    <label>email manager</label>
    <type>Email</type>
</CustomField>