force-app/main/default/objects/Case/fields/Etat_contact__c.field-meta.xml
<CustomField>
    <fullName>Etat_contact__c</fullName>
    <label>Etat contact</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Injoignable</fullName>
            </value>
            <value>
                <fullName>Á rappeler</fullName>
            </value>
            <value>
                <fullName>Contacté</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>