force-app/main/default/objects/Case/fields/EventDate__c.field-meta.xml
<CustomField>
    <fullName>EventDate__c</fullName>
    <label>Event Date</label>
    <type>Date</type>
</CustomField>