force-app/main/default/objects/Case/fields/flag__c.field-meta.xml
<CustomField>
    <fullName>flag__c</fullName>
    <formula>IF( IsClosed ,IMAGE( &apos;/resource/flag_done&apos; ,&apos;flag&apos;,30,30),
             CASE( Status_coleur__c, &apos;Vert&apos;,IMAGE( &apos;/resource/flag_vert&apos; ,&apos;flag&apos;,30,30),
                                      &apos;Orange&apos;,IMAGE( &apos;/resource/flag_orange&apos; ,&apos;flag&apos;,30,30),
                                      &apos;Rouge&apos;,IMAGE( &apos;/resource/flag_rouge&apos; ,&apos;flag&apos;,30,30),
                                      IMAGE( &apos;/resource/flag_noire&apos; ,&apos;flag&apos;,30,30)))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>flag</label>
    <type>Text</type>
</CustomField>