force-app/main/default/objects/Case/fields/iSight__c.field-meta.xml
<CustomField>
    <fullName>iSight__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Anouar: Je viens d&apos;ajouter ce champ</description>
    <inlineHelpText>Anouar: Je viens d&apos;ajouter ce champ</inlineHelpText>
    <label>iSight</label>
    <type>Checkbox</type>
</CustomField>