force-app/main/default/objects/Case/fields/isManagerNotified__c.field-meta.xml
<CustomField>
    <fullName>isManagerNotified__c</fullName>
    <defaultValue>false</defaultValue>
    <label>isManagerNotified</label>
    <type>Checkbox</type>
</CustomField>