force-app/main/default/objects/Case/fields/isNotifiedN_1__c.field-meta.xml
<CustomField>
    <fullName>isNotifiedN_1__c</fullName>
    <defaultValue>false</defaultValue>
    <label>isNotifiedN+1</label>
    <type>Checkbox</type>
</CustomField>