force-app/main/default/objects/Case/fields/last_email_owner__c.field-meta.xml
<CustomField>
    <fullName>last_email_owner__c</fullName>
    <label>last email owner</label>
    <type>Email</type>
</CustomField>