force-app/main/default/objects/Case/fields/last_owner__c.field-meta.xml
<CustomField>
    <fullName>last_owner__c</fullName>
    <label>last owner</label>
    <length>80</length>
    <type>Text</type>
</CustomField>