force-app/main/default/objects/Case/fields/NPS_Group__c.field-meta.xml
<CustomField>
    <fullName>NPS_Group__c</fullName>
    <label>NPS Group</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>NPS__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Promoter</fullName>
            </value>
            <value>
                <fullName>Neutral</fullName>
            </value>
            <value>
                <fullName>Dectractor</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>