force-app/main/default/objects/Case/fields/Pr_contentieux__c.field-meta.xml
<CustomField>
    <fullName>Pr_contentieux__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Anouar : je viens de créer ce champ</description>
    <inlineHelpText>Anouar : je viens de créer ce champ</inlineHelpText>
    <label>Précontentieux</label>
    <type>Checkbox</type>
</CustomField>