force-app/main/default/objects/Case/fields/Prive__c.field-meta.xml
<CustomField>
    <fullName>Prive__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Anouar : je viens d&apos;ajouter le champ</description>
    <inlineHelpText>Anouar : je viens d&apos;ajouter le champ</inlineHelpText>
    <label>Privé</label>
    <type>Checkbox</type>
</CustomField>