force-app/main/default/objects/Case/fields/showroom__c.field-meta.xml
<CustomField>
    <fullName>showroom__c</fullName>
    <label>Showroom</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Showrooms</valueSetName>
    </valueSet>
</CustomField>