force-app/main/default/objects/Case/fields/Status_coleur__c.field-meta.xml
<CustomField>
    <fullName>Status_coleur__c</fullName>
    <label>Status coleur</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Vert</fullName>
                <default>true</default>
                <label>Vert</label>
            </value>
            <value>
                <fullName>Orange</fullName>
            </value>
            <value>
                <fullName>Rouge</fullName>
            </value>
            <value>
                <fullName>Noire</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>