force-app/main/default/objects/Case/fields/Stock__c.field-meta.xml
<CustomField>
    <fullName>Stock__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Anouar : je viens d&apos;ajouter ce champ</description>
    <inlineHelpText>Anouar : je viens d&apos;ajouter ce champ</inlineHelpText>
    <label>Stock</label>
    <referenceTo>Stock__c</referenceTo>
    <relationshipLabel>Tickets</relationshipLabel>
    <relationshipName>Tickets</relationshipName>
    <type>Lookup</type>
</CustomField>