force-app/main/default/objects/Case/fields/Tech_is_changed__c.field-meta.xml
<CustomField>
    <fullName>Tech_is_changed__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Tech is changed</label>
    <type>Checkbox</type>
</CustomField>